# lawyer-assist

./: .env  .gitignore  Dockerfile  README.md  chat.sh  docker-compose.yaml  pyproject.toml  run.sh
data/: data.parquet
notebooks/: 1_prepare_data.ipynb  2_output_gt.ipynb  3_bert_score.ipynb
references/: mlx.txt
src/api/: Dockerfile  chat.py  main.py
src/api/models/: __init__.py  _base.py  _gemma.py  _rag.py
src/data/: __init__.py  _data_crawler.py  _data_processing.py  _mongodb_uploader.py  make_dataset.py  qdrant_helper.py
src/features/: gui.py
src/gui/: Dockerfile  api.py  main.py
src/models/: _fine_tuning_colab.ipynb  _fine_tuning_mlx.py
src/util/: __init__.py  _vectorizer.py  config.py
