[tool.poetry]
name = "lawyer-assist"
version = "0.1.0"
description = ""
authors = ["tcstrength <thai.cuong1404@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.36.0"
ipykernel = "^6.29.5"
lxml = "^5.2.2"
html2text = "^2024.2.26"
python-dotenv = "^1.0.1"
loguru = "^0.7.2"
tqdm = "^4.66.4"
cohere = "^5.5.8"
setuptools = "^70.3.0"
mlx-lm = "^0.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
